--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Going Rogue</title>
   <script type="module" src="src/game.js"></script>
+  <script src="lib/gj-js-api.js"></script>
   <style>
     body {
       background-color: black;
